PIC-3270: [WIP] implemented date carousel and fixed accessibility issues. Need to fix failing tests

--- a/public/src/stylesheets/app/calendar-nav-link-today.scss
+++ b/public/src/stylesheets/app/calendar-nav-link-today.scss
@@ -1,5 +1,10 @@
 .calendar-nav-link-today {
   border-style:solid;
   border-width: thin;
-  border-color:#1d70b8 ;
+  border-color: #1d70b8;
+}
+
+.calendar-nav-link__disabled {
+  color: govuk-colour("dark-grey");
+  background-color: govuk-colour("white");
 }
