PIC-3270: fixed failing tests and some style change

--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -7,7 +7,7 @@
     {%- endif -%}
 {% endfor %}
 
-<section class="splide pac-days-navigation" aria-label="Date navigation" role="region" aria-roledescription="carousel" data-splide='{ "perPage":"{{ params.totalDays/2 }}", "perMove":"{{ params.totalDays/4 }}", "start": "{{ startIndex }}"}'>
+<section class="splide pac-days-navigation govuk-!-margin-bottom-4" aria-label="Date navigation" role="region" aria-roledescription="carousel" data-splide='{ "perPage":"{{ params.totalDays/2 }}", "perMove":"{{ params.totalDays/4 }}", "start": "{{ startIndex }}"}'>
 
     <button class="splide__arrow splide__arrow--prev" aria-label="Previous">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" width="40" height="40" focusable="false">
