feat: PIC-3607 Outcome mass action (assign to)

--- a/public/src/stylesheets/app/_splide_carousel.scss
+++ b/public/src/stylesheets/app/_splide_carousel.scss
@@ -2,6 +2,12 @@
 
 .splide {
 
+  button:disabled {
+    background-color: govuk-colour("dark-grey");
+    cursor: not-allowed !important;
+    opacity: 0.5 !important;
+  }
+
   &__track {
     margin: 0 10px;
   }
