--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -1,28 +1,40 @@
 {%- set moment = params.moment -%}
 
+{% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{%- from "moj/components/button-menu/macro.njk" import mojButtonMenu -%}
+
 {% block javascripts %}
   {% if displayFilters %}
     <script type="text/javascript" src="/javascripts/hearing-outcomes-date-sort-component-{{ appVersion }}.min.js"></script>
     <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
   {% endif %}
   <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"></script>
+  <script type="text/javascript" src="/javascripts/checker_toggle-{{ appVersion }}.min.js"></script>
 {% endblock %}
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table',
     'id': 'hearing-outcome'
   },
   head:
   [
+    { html: govukCheckboxes({
+      name: "common_checker_toggle_apply",
+      classes: "common_checker_toggle_apply govuk-checkboxes--small",
+      items: [{
+        value: "",
+        html: " "
+      }]}) 
+    },
     { text: "Defendant" },
     { text: "Outcome type" },
     { text: "Probation status" },
     { text: "Offence" },
 
-    { text: ('
-      <button id="button-hearing-outcome-sort" type="button" data-sort="' + params.hearingDateSort + '"
-          aria-controls="button-hearing-outcome-sort" class="pac-sort-button">Hearing date
+    { 
+      text: ('
+      <button id="button-hearing-outcome-sort" type="button" class="pac-sort-button" data-sort="' + params.hearingDateSort + '"
+          aria-controls="button-hearing-outcome-sort">Hearing date
       </button>
     ') | safe,
       format: 'numeric',
@@ -51,12 +63,20 @@
     {{ offences.push('</ol>') }}
   {% endif %}
 
-
   {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
   {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
   {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
   {% set summaryLink = '/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary' %}
   {%- set tableRow = [
+    { html: govukCheckboxes({
+      name: "hearingId",
+      classes: "common_checker_toggle_item govuk-checkboxes--small",
+      items: [{
+        id: "id-" + item.hearingId,
+        value: item.hearingId,
+        html: " "
+      }]}) 
+    },
     { text: ('<a href="' + summaryLink + '" class="pac-defendant-link pac-assign govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" data-bs-toggle="modal" data-bs-target="#assign-outcome-modal" aria-label="' + a11yTitle + '" data-hearingid="' + item.hearingId + '" data-defendantid="' + item.defendantId + '" data-courtcode="' + params.courtCode + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
     { text: item.hearingOutcomeDescription | safe },
     { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched)) | safe },
@@ -92,6 +112,21 @@
 {% extends "../partials/layout.njk" %}
 
 {% block content %}
+
+  {% if outcomeActionAssign %}
+    {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+    {% set name = "case" if outcomeActionAssign == 1 else "cases" %}
+    {% set html %}
+      <p class="govuk-notification-banner__heading">
+        You are assigned to result {{outcomeActionAssign}} {{ name }}. They have moved to the in-progress tab.
+      </p>
+    {% endset %}
+    {{ govukNotificationBanner({
+      html: html,
+      type: 'success'
+    }) }}
+  {% endif %}
+
   <h1 class="govuk-heading-xl govuk-!-margin-bottom-6" aria-label="{{ title }}">{{ title }}</h1>
 
   {% if displayFilters %}
@@ -111,7 +146,22 @@
     controls: "outcomes"
   }) }}
 
-  <div class="govuk-tabs__panel">
+  <form class="govuk-tabs__panel common_checker_toggle govuk-checkboxes govuk-checkboxes--small" action="?page={{params.currentPage}}" method="POST">
+
+    <div style="float: right">
+      {{ mojButtonMenu({
+        items: [
+          {
+            text: "Assign to Me",
+            name: "action",
+            value: "assign",
+            classes: "common_checker_toggle_action govuk-button--secondary"
+          }
+        ]
+      }) }}
+    </div>
+     <h1 class="govuk-heading-l">Cases to result</h1>
+
     {% if tableData.rows | length %}
       {% block table %}
         {%- from "govuk/components/table/macro.njk" import govukTable -%}
@@ -124,6 +174,6 @@
       {% endif %}
       <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "There are no cases to be resulted." }}</p>
     {% endif %}
-  </div>
+  </form>
 
 {% endblock %}
