--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -11,7 +11,6 @@
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table',
     'id': 'hearing-outcome-in-progress'
   },
   head:
@@ -20,9 +19,10 @@
     { text: "Outcome type" },
     { text: "Probation status" },
     { text: "Offence", "classes": "govuk-!-width-one-third" },
-    { text: ('
-      <button id="button-hearing-outcome-sort" type="button" data-sort="' + params.hearingDateSort + '"
-          aria-controls="button-hearing-outcome-sort" class="pac-sort-button">Hearing date
+    { 
+      text: ('
+      <button id="button-hearing-outcome-sort" type="button" class="pac-sort-button" data-sort="' + params.hearingDateSort + '"
+          aria-controls="button-hearing-outcome-sort">Hearing date
       </button>
     ') | safe,
       format: 'numeric',
@@ -73,8 +73,6 @@
   {{ tableData.rows.push(tableRow) }}
 
 {% endfor %}
-
-
 
 {%- set listTabs = [
   {
@@ -133,6 +131,7 @@
   }) }}
 
   <div class="govuk-tabs__panel">
+    <h1 class="govuk-heading-l">In progress</h1>
     {% if tableData.rows | length %}
       {% block table %}
         {%- from "govuk/components/table/macro.njk" import govukTable -%}
