--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -11,7 +11,6 @@
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table',
     'id': 'hearing-outcome-resulted'
   },
   head:
@@ -21,8 +20,8 @@
     { text: "Probation status" },
     { text: "Offence", "classes": "govuk-!-width-one-third" },
     { text: ('
-      <button id="button-hearing-outcome-sort" type="button" data-sort="' + params.hearingDateSort + '"
-          aria-controls="button-hearing-outcome-sort" class="pac-sort-button">Hearing date
+      <button id="button-hearing-outcome-sort" type="button" class="pac-sort-button" data-sort="' + params.hearingDateSort + '"
+          aria-controls="button-hearing-outcome-sort">Hearing date
       </button>
     ') | safe,
       format: 'numeric',
@@ -70,7 +69,6 @@
 
 {% endfor %}
 
-
 {%- set listTabs = [
   {
     title: 'Cases to result',
@@ -115,6 +113,7 @@
   }) }}
 
   <div class="govuk-tabs__panel">
+     <h1 class="govuk-heading-l">Resulted cases</h1>
     {% if tableData.rows | length %}
       {% block table %}
         {%- from "govuk/components/table/macro.njk" import govukTable -%}
