PIC-3609: Update whats new & user guide

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -77,7 +77,7 @@
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
       <p class="govuk-body">The case list will show all cases due to be heard in a court on a particular day.</p>
-      <p class="govuk-body">You can see up to 7 working days ahead and 6 working days in the past. Select a date on the date picker to jump to the case list for that day.
+      <p class="govuk-body">You can see up to 2 weeks ahead (including today) and 2 weeks in the past. Select a date on the date picker to jump to the case list for that day.
       </p>
 
       <h3 class="govuk-heading-s" id="ug-what-you-can-see-on-the-case-list">What you can see on the case list</h3>
