--- a/server/views/whats-new.njk
+++ b/server/views/whats-new.njk
@@ -20,6 +20,16 @@
             <h1 class="govuk-heading-l">What's new</h1>
             <p class="govuk-body">The latest updates and improvements to Prepare a case for sentence.</p>
 
+            <h2 class="govuk-heading-m">8 February 2024</h2>
+
+            <h3 class="govuk-heading-s">View case lists earlier</h3>
+
+            <p class="govuk-body">You can now view case lists up to 2 weeks ahead (including today) and 2 weeks in the past using the date picker.</p>
+
+            <p class="govuk-body">Select a date on the date picker to jump to the case list for that day. As Sundays are non-working days they will be visible in the date picker but won’t be clickable. You can use the arrows within the date picker to move forwards and backwards through the date range.</p>
+
+            <p class="govuk-body">We hope that this gives you the opportunity to prep cases earlier.</p>
+
             <h2 class="govuk-heading-m">25 August 2023</h2>
 
             <h3 class="govuk-heading-s">New filters on the case list</h3>
