--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -1,4 +1,5 @@
 {% extends "partials/case-details.njk" %}
+{%- from "components/file-uploader/macro.njk" import pacFileUploader -%}
 
 {%- set moment = params.moment -%}
 {% set courtRoom = data.courtRoom | replace("0", "") if data.courtRoom | first === "0" else data.courtRoom -%}
@@ -24,6 +25,7 @@
 {% block javascripts %}
     {{ super() }}
     <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"></script>
+    <script type="text/javascript" src="/javascripts/common-file-uploader-{{ appVersion }}.min.js"></script>
 {% endblock %}
 
 {% block message %}
@@ -174,6 +176,14 @@
                     </dd>
                 </div>
             </dl>
+
+            <section id="section-files" class="govuk-!-margin-bottom-4">
+                <h2 class="govuk-heading-m govuk-!-margin-top-9">
+                    Case documents
+                </h2>
+                <p class="govuk-body">Upload documents to attach them to this case.</p>
+                {{ pacFileUploader('summary/files', data.files, config.files) }}
+            </section>
 
             <h2 class="govuk-heading-m">Appearance</h2>
             <p class="govuk-body">Court {{ courtRoom | courtRoomDisplay }}, {{ data.session | lower }} session,
