--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -69,11 +69,11 @@
   {% set summaryLink = '/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary' %}
   {%- set tableRow = [
     { html: govukCheckboxes({
-      name: "hearingId",
+      name: "defendantHearingId",
       classes: "common_checker_toggle_item govuk-checkboxes--small",
       items: [{
-        id: "id-" + item.hearingId,
-        value: item.hearingId,
+        id: "id_" + item.defendantId + '_' + item.hearingId,
+        value: item.defendantId + '_' + item.hearingId,
         html: " "
       }]}) 
     },
