style: update gov.uk chrest logo

--- a/public/src/stylesheets/style.scss
+++ b/public/src/stylesheets/style.scss
@@ -9,3 +9,7 @@ $moj-page-width: $govuk-page-width;
 .govuk-notification-banner__content > * {
     max-width: none !important;
 }
+
+.moj-header__logo {
+    color:#fff;
+}
