3584: Wip, refactor case summary controller

--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -60,8 +60,10 @@
         breach: breach,
         awaitingPsr: awaitingPsr,
         hideUnlinkButton: hideUnlinkButton,
-        manualMatch: data.manualMatch
+        manualMatch: data.manualMatch,
+        actionButtonItems: data.actionButtonItems
     }) }}
+    {{data.actionButtonItems}}
 
 {% endblock %}
 
