3584: Moved link / unlink into action button

--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -68,12 +68,14 @@
         {% endset -%}
 
         {% if not params.manualMatch %}
-            <form method="post">
-                {{ mojButtonMenu({
-                items: params.actionButtonItems
-                }) }}
-            </form>
-            {{ ndeliusButton | safe }}
+            {% if params.actionButtonItems %}
+                <form method="post">
+                    {{ mojButtonMenu({
+                    items: params.actionButtonItems
+                    }) }}
+                </form>
+                {{ ndeliusButton | safe }}
+            {% endif %}
         {% endif %}
 
     </div>
