feat: PIC-3622 Workflow Prep Status Assign
This adds prep status for development env. It can't be merged until the backend has caught up.

In addition a fix for CI not using doker-compose default env values is included.

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -6,6 +6,7 @@
 {% block javascripts %}
     {% if displayFilters %}
         <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
+        <script type="text/javascript" src="/javascripts/workflow-tasks-prep-status-selector-{{ appVersion }}.min.js"></script>
     {% endif %}
 {% endblock %}
 
@@ -23,6 +24,10 @@
 
 {%- if params.subsection === 'removed' %}
     {{ tableData.head.push({ text: "Libra case number", format: "numeric" }) }}
+{% endif -%}
+
+{%- if params.workflow.enabled %}
+    {{ tableData.head.push({ html: "Prep status" }) }}
 {% endif -%}
 
 {% for item in data %}
@@ -76,6 +81,27 @@
     {%- if params.subsection === 'removed' %}
         {{ tableRow.push({ text: item.caseNo, format: "numeric" }) }}
     {% endif -%}
+
+    {% if params.workflow.enabled %}
+
+        {% set html = '<select class="workflow-tasks-status-selector" aria-label="Prep Status" data-form-action="/workflow/tasks/prep/state?hearing=' + item.hearingId 
+            + '&defendant=' + item.defendantId + '" data-defendant-fullname="' 
+            + defendantFullName | escape | apostropheInName | properCase | removeTitle + '">' %}
+        
+        {% for prepItem in params.workflow.tasks.prep.items %}
+            {% set html = html + '<option value="' + prepItem.id + '" data-css-class="' + prepItem.cssClass + '"' %}
+            {% if prepItem == item.workflow.tasks.prep %}
+                {% set html = html + ' selected' %}
+            {% endif %}
+
+            {% set html = html + '>' + prepItem.lang.en.title + '</option>' %}
+        {% endfor %}
+
+        {% set html = html + '</select>' %}
+           
+        {{ tableRow.push({ html:html }) }}
+    {% endif %}
+
     {{ tableData.rows.push(tableRow) }}
 
 {% endfor %}
