3584: Disable if not assigned

--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -61,7 +61,8 @@
         awaitingPsr: awaitingPsr,
         hideUnlinkButton: hideUnlinkButton,
         manualMatch: data.manualMatch,
-        actionButtonItems: data.actionButtonItems
+        actionButtonItems: data.actionButtonItems,
+        assignedToCurrentUser: data.assignedToCurrentUser
     }) }}
 
 {% endblock %}
